--- a/Backend/Views/profile.html
+++ b/Backend/Views/profile.html
@@ -8,5 +8,19 @@
 </head>
 <body>
     Hello world
+    <button onclick='logout' type="button">Logout</button>
+    <script>
+        function logout(){
+            fetch('http://localhost:3000/logout', {
+                method: 'POST',
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                },
+            })
+            .then(response => response.json())
+            .then(response => console.log(JSON.stringify(response)))
+        }
+    </script>
 </body>
 </html>
